--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markrobson",
-  "description": "Artist website for Mark Robson",
+  "description": "Gallery and art blog for Mark Robson",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
